[package]
name = "tls-helpers"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "helpers for creating tls tcp connections"
repository = "ssh://git@github.com/wavey-ai/tls-helpers"
readme = "README.md"

[dependencies]
pki-types = { package = "rustls-pki-types", version = "1.4.1" }
rustls = { version = "0.21.0" }
tokio-rustls = "0.26.0"
rustls-pemfile = "2"
tokio = { version = "1.39.2", features = ["net"] }
base64 = "0.22.1"
